fix: margin bottom for align center

--- a/src/pages/download/download.module.css
+++ b/src/pages/download/download.module.css
@@ -8,6 +8,14 @@
   padding: 8px;
 }
 
+.wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
 .text {
   margin: 0 0 36px 0;
 }
